# watch-tower

./: .gitignore  Cargo.toml  README.md  config.yaml.example  index.html  package-lock.json  package.json  prd.md  start.md  vite.config.ts
.github/workflows/: windows-native.yml
designs/: README.md  watch-tower-ui.pen
docs/: tauri-multi-window-architecture.md
docs/brainstorms/: 2026-04-10-watch-tower-v0-1-foundation-requirements.md  2026-04-13-watch-tower-v0-5-desktop-behavior-requirements.md
docs/checklists/: v0-3-resident-acceptance.md  v0-4-alert-closure-acceptance.md  v0-5-desktop-behavior-acceptance.md  v0-5-desktop-behavior-manual-test.md  v0-6-trial-release-acceptance.md
docs/plans/: 2026-04-10-001-feat-watch-tower-roadmap-plan.md  2026-04-10-002-feat-watch-tower-v0-1-foundation-plan.md  2026-04-11-003-feat-watch-tower-v0-2-main-dashboard-plan.md  2026-04-11-004-feat-watch-tower-v0-3-resident-mvp-plan.md  2026-04-12-005-feat-watch-tower-v0-4-minimal-alert-closure-plan.md  (+4 more)
native-shell/: Cargo.toml  build.rs
native-shell/src/: app_state.rs  config.rs  lib.rs  main.rs  main_window_state.rs  notifications.rs  runtime.rs  shell.rs  tray.rs  widget_state.rs
native-shell/tests/: lifecycle_parity.rs  main_window_persistence.rs  main_window_state.rs  runtime_parity.rs  shell_smoke.rs  widget_behavior.rs
native-shell/ui/: main-window.slint
scripts/: mock-alert-server.mjs  run-native.cjs  test-native.cjs
src/: App.css  App.tsx  app.test.tsx  app.tsx  runtime.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: alert-popup.json  default.json  edge-widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: repository.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/polling/: alerts_client.rs  backoff.rs  mod.rs  scheduler.rs  unread_diff.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/windows/: alert_popup.rs  edge_widget.rs  hover_state.rs  mod.rs  positioning.rs  queue.rs
(+51 files in other folders)
