[package]
name = "signal-desk-native"
version = "0.1.0"
edition = "2021"
description = "Slint architecture spike for Signal Desk"

[build-dependencies]
slint-build = "=1.16.0"

[dependencies]
slint = { version = "=1.16.0", default-features = false, features = ["backend-winit", "renderer-software", "std", "compat-1-2", "unstable-winit-030"] }
tray-icon = "0.22.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winrt-toast = "0.1.1"
