[package]
name = "watch-tower"
version = "0.1.0"
description = "Watch Tower desktop host"
authors = ["Codex"]
edition = "2021"

[lib]
name = "watch_tower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
